--- a/package.json
+++ b/package.json
@@ -29,8 +29,15 @@
     "@angular/platform-server": "^20.1.2",
     "@angular/router": "^20.1.2",
     "@angular/ssr": "^20.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@popperjs/core": "^2.11.8",
+    "@types/moment": "^2.13.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.13",
     "express": "^5.1.0",
+    "moment": "^2.30.1",
+    "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -38,6 +45,7 @@
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
     "@angular/compiler-cli": "^20.1.2",
+    "@angular/localize": "^20.1.2",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
