--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/router": "^20.1.2",
     "@angular/ssr": "^20.0.4",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
     "@types/moment": "^2.13.0",
     "animate.css": "^4.1.1",
