--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "moment": "^2.30.1",
     "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.0.4",
