--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/moment": "^2.13.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.13.1",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "moment": "^2.30.1",
