--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@angular/ssr": "^20.0.4",
     "@microsoft/signalr": "^8.0.7",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@ngneat/tailwind": "^7.0.3",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@popperjs/core": "^2.11.8",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/moment": "^2.13.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
@@ -43,23 +45,27 @@
     "moment": "^2.30.1",
     "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^2.2.19",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^20.0.0",
     "@angular/build": "^20.0.4",
-    "@angular/cli": "^20.0.4",
+    "@angular/cli": "^20.1.1",
     "@angular/compiler-cli": "^20.1.2",
     "@angular/localize": "^20.1.2",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
     "typescript": "~5.8.2"
   }
 }
