--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "node_modules/animate.css/animate.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.min.css",
               "node_modules/swiper/swiper-bundle.min.css",
+               "node_modules/leaflet/dist/leaflet.css",
               "src/styles.css"
             ],
             "scripts": [
