--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/compiler": "^20.1.2",
     "@angular/core": "^20.1.2",
     "@angular/forms": "^20.1.2",
+    "@angular/google-maps": "^20.1.2",
     "@angular/platform-browser": "^20.1.2",
     "@angular/platform-server": "^20.1.2",
     "@angular/router": "^20.1.2",
@@ -41,6 +42,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
@@ -57,6 +59,7 @@
     "@angular/localize": "^20.1.2",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20.17.19",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.7.0",
