--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
