--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@angular/platform-server": "^20.1.2",
     "@angular/router": "^20.1.2",
     "@angular/ssr": "^20.0.4",
+    "@fortawesome/angular-fontawesome": "^2.0.1",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@microsoft/signalr": "^8.0.7",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@ngneat/tailwind": "^7.0.3",
