--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@angular/platform-server": "^20.1.2",
     "@angular/router": "^20.1.2",
     "@angular/ssr": "^20.0.4",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-regular-svg-icons": "^7.0.0",
@@ -51,6 +50,7 @@
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
+    "ngx-cookie-service": "^20.0.1",
     "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
