--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/moment": "^2.13.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
+    "icons": "^1.0.0",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "ngx-cookie-service": "^20.0.1",
