--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^5.1.0",
     "icons": "^1.0.0",
     "leaflet": "^1.9.4",
+    "marked": "^16.1.1",
     "moment": "^2.30.1",
     "ngx-cookie-service": "^20.0.1",
     "ngx-daterangepicker-material": "^6.0.4",
